--- a/30fps/sprite_30fps.html
+++ b/30fps/sprite_30fps.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="shapeshifter play" style="background-image: url(sprite_30fps.svg)"></div>
-  <div><button class="button">Replay animation</button></div>
+  <button class="button">Replay animation</button>
   <script>
     document.querySelector('.button').addEventListener('click', function() {
         const animatedElement = document.querySelector('.shapeshifter');
